[workspace]
members = [
    "nolb-core",
    "nolb-agent",
    "nolb-cli",
    "nolb-gui-native",
    "nolb-gui-web"
]

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3 # Optimize for performance
debug = false
incremental = false

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
lto = "fat"
opt-level = 3 # Optimize for performance
debug = false
incremental = false