[package]
name = "nolb-cli"
version = "0.1.0"
edition = "2021"
authors = ["George Chamor <chamor.work@gmail.com>"]

[dependencies]
nolb-codegen = { path = "../nolb-codegen" }
nolb-core = { path = "../nolb-core" }

structopt = "0.3.25"
colored = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8.21"
serde_repr = "0.1.7"
toml = "0.5.8"
thiserror = "1.0.30"
figment = { version = "0.10.6", features = ["yaml", "json", "toml"] }
derive_more = "0.99.17"
derive-new = "0.5.9"
itertools = "0.10.3"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
pretty_assertions = "1.0.0"
either = { version = "1.6.1", features = ["serde"] }
strsim = "0.10.0"
conditional = "0.1.1"
uom = { version = "0.32.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
